--- a/package.json
+++ b/package.json
@@ -1,62 +1,39 @@
 {
-    "author": {
-        "name": "sheetjs"
+    "name": "xlsx",
+    "version": "0.8.6",
+    "author": "sheetjs",
+    "description": "Excel (XLSB/XLSX/XLSM/XLS/XML) and ODS (ODS/FODS/UOS) spreadsheet parser and writer",
+    "keywords": ["excel", "xls", "xlsx", "xlsb", "xlsm", "ods", "office", "spreadsheet"],
+    "bin": {
+        "xlsx": "./bin/xlsx.njs"
     },
-    "bugs": {
-        "url": "https://github.com/SheetJS/js-xlsx/issues"
+    "main": "./xlsx",
+    "dependencies": {
+        "exit-on-epipe": "",
+        "ssf": "~0.8.1",
+        "codepage": "",
+        "cfb": "~0.11.0",
+        "crc-32": "",
+        "adler-32": "",
+        "commander": ""
+    },
+    "devDependencies": {
+        "mocha": "",
+        "xlsjs": "",
+        "uglify-js": ""
+    },
+    "repository": { "type": "git", "url": "git://github.com/SheetJS/js-xlsx.git" },
+    "scripts": {
+        "pretest": "git submodule init && git submodule update",
+        "test": "make test"
     },
     "config": {
         "blanket": {
             "pattern": "xlsx.js"
         }
     },
-    "dependencies": {
-        "adler-32": "",
-        "cfb": ">=0.10.0",
-        "codepage": "~1.3.6",
-        "commander": "",
-        "crc-32": "",
-        "jszip": "2.4.0",
-        "ssf": "~0.8.1"
-    },
-    "description": "Excel (XLSB/XLSX/XLSM/XLS/XML) and ODS spreadsheet parser and writer",
-    "devDependencies": {
-        "mocha": "",
-        "uglify-js": "",
-        "xlsjs": ""
-    },
-    "directories": {},
-    "dist": {
-        "shasum": "253ca61c9e1e14aa4b905dece4ce4757ace99d26",
-        "tarball": "https://registry.npmjs.org/xlsx/-/xlsx-0.8.0.tgz"
-    },
-    "engines": {
-        "node": ">=0.8"
-    },
-    "gitHead": "704442c3a6ac8803df448fea6ef428cd88c4ff48",
-    "homepage": "https://github.com/SheetJS/js-xlsx",
-    "keywords": [
-        "excel",
-        "xls",
-        "xlsx",
-        "xlsb",
-        "xlsm",
-        "ods",
-        "office",
-        "spreadsheet"
-    ],
+    "homepage": "https://oss.sheetjs.com/js-xlsx/",
+    "bugs": { "url": "https://github.com/SheetJS/js-xlsx/issues" },
     "license": "Apache-2.0",
-    "main": "./xlsx",
-    "maintainers": [{
-        "name": "sheetjs",
-        "email": "dev@sheetjs.com"
-    }],
-    "name": "xlsx",
-    "optionalDependencies": {},
-    "readme": "ERROR: No README data found!",
-    "scripts": {
-        "pretest": "git submodule init && git submodule update",
-        "test": "make test"
-    },
-    "version": "1.0.0"
+    "engines": { "node": ">=0.8" }
 }
